Added File IO in the form of copy and past in CVS form

--- a/MUNApp/MUNApp.csproj
+++ b/MUNApp/MUNApp.csproj
@@ -98,6 +98,7 @@
     <Compile Include="CommitteePage.xaml.cs">
       <DependentUpon>CommitteePage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CompleteCommittee.cs" />
     <Compile Include="EditPage.xaml.cs">
       <DependentUpon>EditPage.xaml</DependentUpon>
     </Compile>
